<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.HomeActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@mipmap/app_logo" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"/>
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="15dp"
            app:cardCornerRadius="15dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView3">
            <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/profile_logo" />

        </androidx.cardview.widget.CardView>


    </LinearLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_above="@+id/llBottom">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3"
                android:orientation="vertical" >
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:layout_margin="10dp"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"

                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:textColor="@color/black"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="10dp"
                            android:textSize="17sp"
                            android:text="@string/overview"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/linear_draw"
                            android:layout_margin="15dp"
                            android:gravity="center"
                            android:padding="10dp"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_regular"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                android:layout_weight="@integer/material_motion_duration_long_1"
                                android:text="@string/profile_view"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/tv_profile_views"
                                android:fontFamily="@font/poppins_regular"
                                android:layout_marginRight="10dp"
                                android:textColor="@color/drawable_color"
                                android:textSize="17sp"
                               />
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/profile_view"
                                android:src="@drawable/dases"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/linear_draw"
                            android:layout_margin="15dp"
                            android:gravity="center"
                            android:padding="10dp"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_regular"
                                android:textColor="@color/black"
                                android:textSize="17sp"
                                android:layout_weight="@integer/material_motion_duration_long_1"
                                android:text="@string/mentor_ship"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/tv_mentorship_sessions"
                                android:fontFamily="@font/poppins_regular"
                                android:textColor="@color/drawable_color"
                                android:layout_marginRight="10dp"
                                android:textSize="17sp"
                             />
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/profile_view"
                                android:src="@drawable/dases"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/linear_draw"
                            android:layout_margin="15dp"
                            android:gravity="center"
                            android:padding="10dp"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_regular"
                                android:textColor="@color/black"
                                android:textSize="17sp"
                                android:layout_weight="@integer/material_motion_duration_long_1"
                                android:text="@string/profile_view"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_regular"
                                android:id="@+id/tv_jobs_applied"
                                android:textColor="@color/drawable_color"
                                android:layout_marginRight="10dp"

                                android:textSize="17sp"/>
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/profile_view"
                                android:src="@drawable/dases"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/linear_draw"
                            android:layout_margin="15dp"
                            android:gravity="center"
                            android:padding="10dp"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_regular"
                                android:textColor="@color/black"
                                android:textSize="17sp"
                                android:layout_weight="@integer/material_motion_duration_long_1"
                                android:text="@string/profile_view"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/tv_skills_verified"
                                android:fontFamily="@font/poppins_regular"
                                android:textColor="@color/drawable_color"
                                android:layout_marginRight="10dp"
                                android:textSize="17sp"/>
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/profile_view"
                                android:src="@drawable/dases"/>
                        </LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:textColor="@color/black"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="10dp"
                            android:textSize="17sp"
                            android:text="@string/upcoming_session"/>

                        <androidx.recyclerview.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:nestedScrollingEnabled="false"
                            android:id="@+id/rlvSession"/>


                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:textColor="@color/black"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="10dp"
                            android:textSize="17sp"
                            android:text="@string/new_jobs"/>

                        <androidx.recyclerview.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:nestedScrollingEnabled="false"
                            android:id="@+id/rlvJobs"/>


                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </LinearLayout>

        </LinearLayout>



    </androidx.core.widget.NestedScrollView>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/llBottom"
        android:background="@drawable/linear_draw"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_weight="@integer/material_motion_duration_long_1"
            android:text="Home"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Suffle"/>

    </LinearLayout>



</RelativeLayout>